# table-printer

./: .gitignore  CMakeLists.txt  README.md  TODO  custom_string.c  custom_string.h  main.c  options.c  options.h  string_array.c  string_array.h  string_table.c  string_table.h  table-printer.nix  test
.github/workflows/: cmake-release.yml  nix.yml
